...
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:id="@+id/activity_main"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShowDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showOpenTimePicker"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:src="@drawable/ic_add"
...
